assets/scss/_variables.scss
:root {
  --color-mode: 'lit';
  --light: #fff;
  --dark: #000;
  --gray: #f5f5f5;
  --bubble: #131313;
  --accent: var(--gray);
  --bg: var(--light);
  --text: var(--dark);
  --font: Arial, Helvetica, sans-serif;
  --theme: #808080;
  --ease: cubic-bezier(.19,1,.22,1);

  @mixin darkmode {
    --color-mode: 'dim';
    --bg: var(--dark);
    --text: var(--light);
    --accent: var(--bubble);
    *{
      box-shadow: none !important;
    } 
  }
  
  &[data-mode="dark"] {
    @include darkmode;
  }
  @media (prefers-color-scheme: dark) { 
    &:not([data-mode="lit"]) {
      @include darkmode;
    }
  }
}

